--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400&display=swap"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Segoe UI:wght@700&display=swap"
+    />
   </head>
   <body>
     <div class="soc-pms-login-page">
